intervalsets-macros/tests/ui/missing_comma.rs
use intervalsets_macros::interval;

fn main() {
    let _ = interval!("[0 10]");
}
